--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 torch >= 2.4.1
-numpy
 tqdm
-datasets
 wandb
-transformers
+scikit-learn
+transformers==4.45.0
+accelerate==0.34.2
+datasets==3.0.1
+deepspeed==0.15.1
+numpy==1.26.4
